--- a/styles/case-study.css
+++ b/styles/case-study.css
@@ -57,8 +57,19 @@ header {
   padding-top: 5rem;
 }
 
+.case-studies {
+  width: 80%;
+  margin: auto;
+}
+
 .navigation .case-studies .first {
   padding: 3rem;
+  border-style: solid;
+  border-radius: 15px;
+  border-width: 1px;
+  border-color: #333333;
+  width: 48%;
+  display: inline-block;
   /*background: rgb(89,51,75);
   background: linear-gradient(166deg, rgba(89,51,75,1) 0%,
   rgba(165,137,154,1) 62%, rgba(89,51,75,1) 100%);*/
@@ -66,6 +77,12 @@ header {
 
 .navigation .case-studies .second {
   padding: 3rem;
+  border-style: solid;
+  border-radius: 15px;
+  border-width: 1px;
+  border-color: #333333;
+  width: 48%;
+  display: inline-block;
   /*background: rgb(229,58,32);
   background: linear-gradient(112deg, rgba(229,58,32,1) 0%, rgba(212,176,140,1) 38%,
   rgba(172,216,217,1) 100%);*/
