--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@ html {
 
 header {
   padding: 3rem 0 0;
-  background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);
+  background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 40%, #EACCF8 49%, #6654F1 100%);
   width: 100%;
 }
 
