--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,15 @@ header {
   width: 100%;
 }
 
+.logo {
+  width: 30%;
+  float: left;
+}
+
+.logo h1 {
+  font-size: 3em;
+}
+
 .hero {
   width: 100%;
   margin: auto;
@@ -36,25 +45,27 @@ body {
 }
 
 h1 {
-  font-size: 40px;
-  line-height: 43px;
-  letter-spacing: 1.4px;
-}
-
-h1, h2 {
   font-family: 'Rozha one', serif;
   min-height: 100%;
+  font-size: 80px;
+  line-height: 57px;
+  letter-spacing: 3.4px;
+  margin: 0;
 }
 
 h2 {
-  font-size: 30px;
+  font-family: "quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
   line-height: 43px;
-  letter-spacing: 1px;
+  letter-spacing: .5px;
+  min-height: 100%;
+  margin: 0;
 }
 
 h3 {
   font-family: 'Quicksand', sans-serif;
-  font-size: 28px;
+  font-size: 24px;
   line-height: 40px;
   min-height: 100%;
   font-weight: normal;
@@ -113,8 +124,6 @@ button:hover {
 #contact {
   clear: both;
   width: 100%;
-  background: rgb(98,216,184,1);
-  /*background: linear-gradient(171deg, rgba(255,252,252,1) 43%, rgba(98,216,184,1) 100%);*/
   padding: 5rem 0;
 }
 
@@ -376,6 +385,8 @@ nav li a:hover {
 @media screen and (max-width: 425px) {
   h1 {
     margin-top: 0;
+    font-size: 70px;
+    line-height: 47px;
   }
 
   p {
