--- a/styles/rfs.css
+++ b/styles/rfs.css
@@ -30,6 +30,10 @@
   margin: auto;
 }
 
+.inspo {
+  padding-left: 0;
+}
+
 .inspo li {
   display: block;
 }
@@ -66,6 +70,36 @@
   clear: both;
 }
 
+.survey {
+  width: 90%;
+  margin: auto;
+}
+
+.survey .third {
+  border-style: solid;
+  border-radius: 50px;
+  border-width: px;
+  border-color: #58334a;
+  padding: 2.1rem;
+  margin: 1rem .2rem 1rem;
+  text-align: center;
+  width: 30%;
+}
+
+.survey h2 {
+  text-align: center;
+  color: rgba(89,51,75,1);
+  font-weight: 700;
+}
+
+span {
+  text-shadow: 1px 0px 3px rgba(89,51,75,1);
+}
+
+span:hover {
+  text-shadow: none;
+}
+
 
 /*challenges & solutions */
 .environment {
@@ -85,6 +119,11 @@
   margin: 0;
 }
 
+.environment-results {
+  width: 65%;
+  margin: auto;
+}
+
 .environment .first {
   float: left;
 }
@@ -96,6 +135,7 @@
 
 .environment ul.survey {
   width: 100%;
+  padding: 1rem 5rem 0 1rem;
 }
 
 .environment li {
@@ -108,6 +148,10 @@
   width: 100%;
   margin: auto;
   display: block;
+}
+
+.user-boxes {
+  padding-top: 1rem;
 }
 
 /*info arch */
@@ -424,8 +468,8 @@
     font-size: 25px;
   }
 
-  .user-boxes img {
-    padding: 1rem 0;
+  .user-boxes {
+    padding: 2rem 0;
     width: 100%;
     float: left;
   }
