--- a/styles/rfs.css
+++ b/styles/rfs.css
@@ -6,7 +6,10 @@
 }
 
 .case-hero {
+  width: 65%;
+  margin: auto;
   color: #eaeaea;
+  padding: 5rem 0;
 }
 
 .nav-bar a {
@@ -17,6 +20,29 @@
 .introduction, .intro {
   width: 100%;
   margin: auto;
+}
+
+.introduction .two-thirds {
+  padding-left: 0;
+}
+
+.introduction .one-third {
+  padding: 0;
+}
+
+#rotate {
+  transform: rotate(90deg);
+  width: 50%;
+  margin: 0 5rem;
+  padding: 3rem;
+}
+
+.introduction li {
+  display: block;
+}
+
+.introduction img {
+  width: 100%;
 }
 
 .intro {
@@ -71,8 +97,8 @@
 }
 
 .survey {
-  width: 90%;
-  margin: auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .survey .third {
@@ -106,9 +132,27 @@ span:hover {
   width: 100%;
   margin: auto;
   color: white;
-  background: rgb(89,51,75);
+  /*background: rgb(89,51,75);
   background: linear-gradient(166deg, rgba(165,137,154,1) 20%,
-  rgba(89,51,75,1) 89%);
+  rgba(89,51,75,1) 89%);*/
+  background-image: url(../images/rfs-shoe-bg.png);
+  background-size: cover;
+  background-position: center;
+  border-radius: 30px;
+}
+
+.environment #container {
+  padding:;
+}
+
+.environment-results {
+  /*background-image: url(../images/rfs-shoe-bg.png);
+  background-size: cover;
+  background-position: center;
+  border-radius: 30px;
+  padding: 5rem;
+  width: 65%;
+  margin: auto;*/
 }
 
 .environment h3 {
@@ -119,27 +163,14 @@ span:hover {
   margin: 0;
 }
 
-.environment-results {
-  width: 65%;
-  margin: auto;
-}
-
-.environment .first {
-  float: left;
-}
-
-.environment .second {
-  float: right;
-  position: relative;
-}
-
 .environment ul.survey {
   width: 100%;
-  padding: 1rem 5rem 0 1rem;
+  padding: 0;
+  margin: 0;
 }
 
-.environment li {
-  display: list-item;
+.environment .survey li {
+  display: block;
 }
 
 
@@ -297,12 +328,21 @@ span:hover {
 
 
 /* Media Queries */
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 768px) {
   .inspo {
     width: 100%;
   }
 
+  #rotate {
+    padding: 1.5rem;
+    margin: 0 3rem;
+  }
+  .introduction .two-thirds {
+    padding-right: 3rem;
+  }
+
 }
+
 
 @media screen and (max-width: 768px) {
   p {
@@ -350,10 +390,23 @@ span:hover {
     width: 100%;
   }
 
+  .environment {
+    background: none;
+  }
+
+  .environment-results {
+    margin: auto;
+    color: white;
+    background-image: url(../images/rfs-shoe-bg.png);
+    background-size: cover;
+    background-position: center;
+    border-radius: 30px;
+    padding: 2rem;
+  }
   .environment .first, .environment .second, .user-test .first, .user-test .second {
     display: block;
     width: 100%;
-    padding-left: 0;
+    text-align: center;
   }
 
   .environment ul {
@@ -461,17 +514,20 @@ span:hover {
     padding: 0;
     line-height: 25px;
     font-size: 16px;
-    display: list-item;
   }
 
   .user-research li span {
     font-size: 25px;
   }
 
-  .user-boxes {
-    padding: 2rem 0;
+  .first {
+    margin-bottom: 1rem;
+  }
+
+  .first, .second, .two-thirds, .one-third {
     width: 100%;
     float: left;
+
   }
 
   .full {
@@ -484,12 +540,17 @@ span:hover {
     float: left;
   }
 
-  .third {
+  .third, .survey .third {
     width: 100%;
     display: block;
     float: none;
     margin: 0 auto;
     padding: .5rem 0;
+  }
+
+  .survey .third {
+    padding: 2.1rem;
+    margin: 1rem 0;
   }
 
   .info-arch-container {
@@ -498,10 +559,6 @@ span:hover {
 
   .mapping img{
     display: none;
-  }
-
-  .sketching, .prototype-container, .competition, .user-research {
-    padding: 3rem 0;
   }
 
   .prototype h3 {
