--- a/styles/rfs.css
+++ b/styles/rfs.css
@@ -41,6 +41,10 @@
   display: block;
 }
 
+.goal li {
+  display: list-item;
+}
+
 .introduction img {
   width: 100%;
 }
@@ -95,21 +99,30 @@
 .user-research p {
   clear: both;
 }
-
-.survey {
-  width: 80%;
+.user-research .survey {
+  width: 100%;
   margin: 0 auto;
-}
-
-.survey .third {
   border-style: solid;
   border-radius: 50px;
-  border-width: px;
   border-color: #58334a;
-  padding: 2.1rem;
+  padding: 2rem;
   margin: 1rem .2rem 1rem;
   text-align: center;
-  width: 30%;
+}
+
+.survey {
+  width: 100%;
+  padding: 2rem;
+  margin: auto;
+}
+
+.user-research .one-third {
+  padding: 0;
+  float: left;
+}
+
+.user-research .two-thirds {
+  padding-left: 2rem;
 }
 
 .survey h2 {
@@ -134,15 +147,19 @@ span:hover {
   color: white;
   /*background: rgb(89,51,75);
   background: linear-gradient(166deg, rgba(165,137,154,1) 20%,
-  rgba(89,51,75,1) 89%);*/
+  rgba(89,51,75,1) 89%);
   background-image: url(../images/rfs-shoe-bg.png);
   background-size: cover;
   background-position: center;
-  border-radius: 30px;
+  border-radius: 30px;*/
 }
 
 .environment #container {
-  padding:;
+  background-image: url(../images/rfs-shoe-bg.png);
+  background-size: cover;
+  background-position: center;
+  border-radius: 50px;
+  padding: 5rem;
 }
 
 .environment-results {
@@ -157,6 +174,8 @@ span:hover {
 
 .environment h3 {
   color: white;
+  text-align: center;
+  padding-bottom: .5rem;
 }
 
 .environment p {
@@ -166,6 +185,7 @@ span:hover {
 .environment ul.survey {
   width: 100%;
   padding: 0;
+  padding-left: 1.5rem;
   margin: 0;
 }
 
@@ -196,6 +216,11 @@ span:hover {
   padding-bottom: 3rem;
 }
 
+.mapping .one-third {
+  padding: 0 2rem 0 0;
+  float: left;
+}
+
 /* sketch */
 .sketch {
   width: 100%;
@@ -204,8 +229,68 @@ span:hover {
   color: white;
 }
 
+.sketch button {
+  background: white;
+}
+
+.sketch button:hover {
+  background: black;
+}
+
+.shoe-iteration {
+  padding: 2rem 0;
+}
+
 .sketch .more-full {
   padding: 2rem 0;
+}
+.sketch-img .one-third {
+  float: left;
+  padding-left: 0;
+}
+.sketch-img .two-thirds {
+  float: right;
+  padding-left: 0;
+}
+/*
+.bubble {
+  color: black;
+  position: relative;
+  display:inline-block;
+  max-width:250px;
+  min-height:1.5em;
+  padding: 20px;
+  background: #FFFCFC;
+  border: #FFFCFC solid 1px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+}
+
+.bubble:after {
+  content: "";
+  position: absolute;
+  bottom: -15px;
+  left: 60%;
+  border-style: solid;
+  border-width: 15px 15px 0;
+  border-color: #FFFCFC transparent;
+  display: block;
+  width: 0;
+  z-index: 1;
+}
+
+.bubble:before {
+  content: "";
+  position: absolute;
+  bottom: -19.5px;
+  left: calc(60% - 3px) ;
+  border-style: solid;
+  border-width: 18px 18px 0;
+  border-color: #FFFCFC transparent;
+  display: block;
+  width: 0;
+  z-index: 0;
 }
 
 /*branding*/
@@ -214,15 +299,18 @@ span:hover {
   margin: auto;
 }
 
+.branding .one-third {
+  padding-left: 1rem;
+  width: 100
+}
+
 .branding-section {
   padding-bottom: 3rem;
 }
 
 .final-logos {
-  width: 65%;
   display: block;
   margin: auto;
-  padding-top: 1rem;
 }
 
 .final-logos img.second {
@@ -251,18 +339,16 @@ span:hover {
 }
 
 .type {
-  width: 60%;
+  width: 100%;
   display: inline-block;
   float: left;
-  padding-bottom: 2rem;
 }
 
 .button {
   display: inline-block;
   float: left;
-  padding-left: 1rem;
   clear: none;
-  width: 30%;
+  width: 100%;
 }
 
 .button img {
@@ -272,12 +358,12 @@ span:hover {
 .mock {
   clear: both;
   margin: 0;
+  padding-top:3rem;
 }
 
 .mock img {
   margin: 0 auto;
   width: 65%;
-  width: 100%;
 }
 
 
@@ -382,7 +468,12 @@ span:hover {
     padding: 0;
     width: 100%;
     margin-top: 0;
-    padding-left: 1rem;
+  }
+
+  .two-thirds, .one-third {
+    width: 100%;
+    float: left;
+    padding: 1rem 2rem 0 0;
   }
 
   .user-research li {
@@ -527,7 +618,7 @@ span:hover {
   .first, .second, .two-thirds, .one-third {
     width: 100%;
     float: left;
-
+    padding: 1rem 2rem 0 0;
   }
 
   .full {
@@ -549,8 +640,7 @@ span:hover {
   }
 
   .survey .third {
-    padding: 2.1rem;
-    margin: 1rem 0;
+    padding: 1rem;
   }
 
   .info-arch-container {
